# ProgettoASD

./: .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
contentscanner/: ContentScanner.py  main.py
tests/: contentscanner_test.py
